5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1760_1576.log
== TEST (2019-05-22 22:46:18) 
-- CODE:
from numpy import *
a = array(eval(input("escreva o vetor: ")))
b = array(eval(input("escreva o vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:34:21) 
-- CODE:
from numpy import *

a = array(eval(input("escreva o vetor: ")))
b = array(eval(input("escreva o vetor: ")))
i = 0

pedra = 11
papel = 22
tesoura = 33

while(a == b):
	

-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:13:25) 
-- CODE:
from numpy import *

a = array(eval(input("escreva o vetor: ")))
b = array(eval(input("escreva o vetor: ")))
i = 0

pedra = 11
papel = 22
tesoura = 33

if(a == b):
	print("empate")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:14:14) 
-- CODE:
from numpy import *

a = array(eval(input("escreva o vetor: ")))
b = array(eval(input("escreva o vetor: ")))
i = 0

pedra = 11
papel = 22
tesoura = 33

if(a == b):
	print("empate")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:14:21) 
-- CODE:
from numpy import *

a = array(eval(input("escreva o vetor: ")))
b = array(eval(input("escreva o vetor: ")))
i = 0

pedra = 11
papel = 22
tesoura = 33

if(a == b):
	print("empate")

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:16:07) 
-- CODE:
from numpy import *

a = array(eval(input("escreva o vetor: ")))
b = array(eval(input("escreva o vetor: ")))

pedra = 11
papel = 22
tesoura = 33

if(a == b):
	print("empate")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:17:39) 
-- CODE:
from numpy import *

a = array(eval(input("escreva o vetor: ")))
b = array(eval(input("escreva o vetor: ")))


if(a == b):
	print("empate")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:54:17) 
-- CODE:
from numpy import *

a = array(eval(input("escreva o vetor: ")))
b = array(eval(input("escreva o vetor: ")))

pedra = 11
papel = 22
tesoura = 33

if([a] == [b]):
	print("empate")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
